feat: update color variables and semantic color assignments in CSS

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,8 +10,8 @@ body {
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
+  color: var(--color-text-secondary);
+  background: var(--color-background-secondary);
   font-family: var(--font-nunito-sans), Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
