--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -2,66 +2,104 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 16px;
+  padding: 16px var(--container-padding);
   border: 1px solid var(--color-border-medium);
+  position: relative;
+
+  & > .rightBlock{
+  flex-grow: 1;  
+  }
 }
 
-.header[data-menu="false"] + * nav {
+.header[data-menu="false"] .navContainer {
   height: 0;
   display: none;
   opacity: 0;
-  transition:
-    height 250ms ease-in-out,
-    opacity 250ms ease-in-out,
-    display 250ms allow-discrete;
+  padding: 0;
+  top: -100%;
+  transition: height 250ms ease-in-out, opacity 150ms ease-in-out,
+    display 250ms allow-discrete, top 250ms ease-in-out, padding 10ms ease-in-out;
 
   @media (max-width: 1023.9px) {
     @starting-style {
+      padding: 8px;
+      top: calc(100% - 3px);
       height: auto;
       opacity: 1;
     }
   }
+
+  @media (min-width: $lg) {
+    display: flex;
+    height: auto;
+    opacity: 1;
+  }
 }
 
-.header[data-menu="true"] + * nav {
+.header[data-menu="true"] .navContainer {
   display: grid;
   height: auto;
   opacity: 1;
-  transition:
-    height 250ms ease-in-out,
-    opacity 250ms ease-in-out,
-    display 249ms allow-discrete;
-
-  @media (min-width: $lg) {
-    display: none;
-  }
+  top: calc(100% - 3px);
+  transition: height 250ms ease-in-out, opacity 250ms ease-in-out,
+    display 249ms allow-discrete, top 250ms ease-in-out;
 
   @starting-style {
+    top: -100%;
     height: 0;
     opacity: 0;
   }
-}
 
-.rightBlock {
-  display: flex;
-}
-
-.avatar {
-  border-radius: 10px;
-}
-
-.header[data-menu="true"] .menuButton {
-
+  @media (min-width: $lg) {
+    display: flex;
+  }
 }
 
 .menuButton {
   display: flex;
   align-items: center;
+  justify-self: end;
   padding: 12px;
   border-radius: 4px;
-  background-color:  var(--color-button-menu-bg);
+  background-color: var(--color-button-menu-bg);
 
   @media (min-width: $lg) {
     display: none;
   }
 }
+
+.navContainer {
+  padding: 8px;
+  border-radius: 8px;
+  background-color: var(--color-background-primary);
+  box-shadow: var(--shadow-menu);
+  border: 1px solid var(--color-border-light);
+
+  position: absolute;
+  left: var(--container-padding);
+  right: var(--container-padding);
+
+  @media (min-width: $lg) {
+    position: unset;
+    display: flex;
+    justify-content: space-between;
+    background-color: inherit;
+    box-shadow: none;
+    border: none;
+    border-radius: 0;
+    padding: 0;
+  }
+}
+
+.navBtn {
+  display: grid;
+  padding: 12px 16px;
+  border-radius: 10px;
+  font-family: var(--font-nunito);
+  font-size: 20px;
+  font-weight: bold;
+  line-height: 1.4;
+  letter-spacing: -0.5px;
+}
+
+
