--- a/src/components/shared/buttonAsLink.module.css
+++ b/src/components/shared/buttonAsLink.module.css
@@ -1,4 +1,5 @@
 .btnConstant {
+  display: inline-block;
   color: var(--color-button-primary-text);
   background-color: var(--color-button-primary-bg);
   text-align: center;
