--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,7 +5,7 @@
 html,
 body {
   max-width: 100vw;
-  overflow-x: hidden;
+  overflow-x: clip;
 }
 
 body {
@@ -21,9 +21,23 @@ body {
   flex-direction: column;
   justify-content: center;
   min-height: 100vh;
+  overflow-x: clip;
 }
 
 main{
 flex-grow: 1;
 padding:0  var(--container-padding);
+
+@media(min-width:$xl){
+padding:0  calc(var(--container-padding) + 36px);
+}
+}
+
+.sectionTop:not(:last-child){
+padding-bottom: 32px;
+padding-top: 48px;
+}
+
+.sectionTop:not(:first-child){
+padding-top: 32px;  
 }
