--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,20 +24,46 @@ body {
   overflow-x: clip;
 }
 
-main{
-flex-grow: 1;
-padding:0  var(--container-padding);
+main {
+  flex-grow: 1;
+  padding: 0 var(--container-padding);
 
-@media(min-width:$xl){
-padding:0  calc(var(--container-padding) + 36px);
-}
-}
-
-.sectionTop:not(:last-child){
-padding-bottom: 32px;
-padding-top: 48px;
+  @media (min-width: $xl) {
+    --container-padding-extra: calc(var(--container-padding) + 36px);
+    padding: 0 var(--container-padding-extra);
+  }
 }
 
-.sectionTop:not(:first-child){
-padding-top: 32px;  
+.sectionTop {
+  position: relative;
+
+  @media (min-width: $sm) {
+    &.hasDivider::after {
+      content: "";
+      background-color: var(--color-border-medium);
+      width: calc(100% + (var(--container-padding) * 2));
+      height: 1px;
+      position: absolute;
+      bottom: 0;
+      left: calc(0px - var(--container-padding));
+      right: calc(0px - var(--container-padding));
+
+      @media (min-width: $xl) {
+        --container-padding-extra: calc(var(--container-padding) + 36px);
+
+        left: calc(0px - var(--container-padding-extra));
+        right: calc(0px - var(--container-padding-extra));
+        width: calc(100% + (var(--container-padding-extra) * 2));
+      }
+    }
+  }
+}
+
+.sectionTop:not(:last-child) {
+  padding-bottom: 32px;
+  padding-top: 48px;
+}
+
+.sectionTop:not(:first-child) {
+  padding-top: 32px;
 }
