--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -3,7 +3,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 16px var(--container-padding);
-  border: 1px solid var(--color-border-medium);
+  border-bottom: 1px solid var(--color-border-medium);
   position: relative;
 
   & > .rightBlock{
@@ -80,6 +80,7 @@
   right: var(--container-padding);
   z-index: 999;
 
+  
   @media (min-width: $lg) {
     position: unset;
     display: flex;
