--- a/src/styles/reuse.css
+++ b/src/styles/reuse.css
@@ -17,17 +17,14 @@
 .text-preset-2 {
   font-family: var(--font-nunito), sans-serif;
   font-weight: 800; /* ExtraBold */
-  font-size: 48px;
-  line-height: 1.2; /* 120% */
-  letter-spacing: -1px;
-}
-
-.text-preset-2-mobile {
-  font-family: var(--font-nunito), sans-serif;
-  font-weight: 800; /* ExtraBold */
   font-size: 40px;
   line-height: 1.2; /* 120% */
   letter-spacing: -2px;
+
+  @media (min-width: $sm) {
+    font-size: 48px;
+    letter-spacing: -1px;
+  }
 }
 
 .text-preset-3 {
