--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -63,6 +63,10 @@
   border-radius: 4px;
   background-color: var(--color-button-menu-bg);
 
+  @supports (-moz-user-select: none) {
+  margin-left: auto;  
+  }
+
   @media (min-width: $lg) {
     display: none;
   }
