--- a/src/styles/reuse.css
+++ b/src/styles/reuse.css
@@ -90,3 +90,16 @@
   line-height: 1.5; /* 150% */
   letter-spacing: -0.3px;
 }
+
+.visually-hidden {
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  margin: -1px;
+}
