--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -56,6 +56,8 @@
   --shadow-menu: 0 12px 22px -12px var(--color-neutral-600);
   --shadow-img: 0 0 0 3.5px var(--color-background-primary);
   --shadow-ico:  0 1px 0 0 #e9ede8;
+  --shadow-radio-hover: 0 1px 2px 0 rgba(22, 58, 52, 0.12);
+  --shadow-radio-focus:0 0 0 4px #e9ede8;
 
   --container-padding:16px;
 
