--- a/src/components/recipesList/recipesForm.module.css
+++ b/src/components/recipesList/recipesForm.module.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   gap: 12px;
+  margin-bottom: 24px;
 
   @media (min-width: $sm) {
     flex-direction: row;
