--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -102,6 +102,10 @@ html:focus-within {
   scroll-behavior: smooth;
 }
 
+html{
+scroll-behavior: smooth;  
+}
+
 /* Make images easier to work with */
 img,
 picture {
@@ -128,6 +132,7 @@ body {
   min-height: 100vh;
   text-rendering: optimizeSpeed;
   line-height: 1.5;
+  scroll-behavior: smooth;
 }
 
 /* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
