feat: add diet filtering to recipe fetching; enhance RecipesForm and filterRecipes functionality

--- a/src/components/recipesList/recipesForm.module.css
+++ b/src/components/recipesList/recipesForm.module.css
@@ -53,6 +53,7 @@
     background-color: var(--color-background-primary);
 
     width: var(--width-for-small-devices);
+    max-height: 300px;
     text-align: center;
     padding: 8px;
 
