--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,32 @@
 @import url(../styles/reset.css);
 @import url(../styles/reuse.css);
 
+::-webkit-scrollbar {
+  width: var(--scrollbar-size);
+}
+
+::-webkit-scrollbar-track {
+  background: var(--color-text-primary);
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--color-accent-orange);
+  border-radius: 4px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: color-mix(
+    in srgb,
+    var(--color-accent-orange) 70%,
+    transparent 30%
+  );
+}
+
+html {
+  overflow: overlay;
+  margin-right: calc(-1 * var(--scrollbar-size));
+}
+
 html,
 body {
   max-width: 100vw;
@@ -31,6 +57,9 @@ img {
 main {
   flex-grow: 1;
   padding: 0 var(--container-padding);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 
   @media (min-width: $xl) {
     --container-padding-extra: calc(var(--container-padding) + 36px);
