--- a/src/styles/reuse.css
+++ b/src/styles/reuse.css
@@ -103,3 +103,13 @@
   clip-path: inset(50%);
   margin: -1px;
 }
+
+.nailContent {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+
+  & > *:last-child{
+    margin-top: auto;
+  }
+}
