--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -61,6 +61,7 @@
   --shadow-card: 0 8px 16px -9px rgba(22, 58, 52, 0.16);;
 
   --container-padding:16px;
+   --scrollbar-size: 8px;
 
   @media (min-width: $md) {
   --container-padding: 32px;  
