--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,30 +2,31 @@
 @import url(../styles/reset.css);
 @import url(../styles/reuse.css);
 
-::-webkit-scrollbar {
-  width: var(--scrollbar-size);
-}
+@supports not (-moz-user-select: none) {
+  ::-webkit-scrollbar {
+    width: var(--scrollbar-size);
+  }
 
-::-webkit-scrollbar-track {
-  background: var(--color-text-primary);
-}
+  ::-webkit-scrollbar-track {
+    background: var(--color-text-primary);
+  }
 
-::-webkit-scrollbar-thumb {
-  background-color: var(--color-accent-orange);
-  border-radius: 4px;
-}
+  ::-webkit-scrollbar-thumb {
+    background-color: var(--color-accent-orange);
+    border-radius: 4px;
+  }
 
-::-webkit-scrollbar-thumb:hover {
-  background-color: color-mix(
-    in srgb,
-    var(--color-accent-orange) 70%,
-    transparent 30%
-  );
-}
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: color-mix(
+      in srgb,
+      var(--color-accent-orange) 70%,
+      transparent 30%
+    );
+  }
 
-html {
-  overflow: overlay;
-  margin-right: calc(-1 * var(--scrollbar-size));
+  html {
+    margin-right: calc(-1 * var(--scrollbar-size));
+  }
 }
 
 html,
@@ -336,7 +337,6 @@ footer {
   }
 }
 
-
-[aria-current="page"]{
-pointer-events: none;  
+[aria-current="page"] {
+  pointer-events: none;
 }
