ready for testing on the oracle vm

--- a/src/app/favorite/page.module.css
+++ b/src/app/favorite/page.module.css
@@ -54,4 +54,13 @@
       }
     }
   }
+
+  & > nav[aria-label="Pagination Navigation"] {
+    opacity: 1;
+    transition: opacity 0.4s ease-in-out;
+
+    @starting-style {
+      opacity: 0;
+    }
+  }
 }
