--- a/src/components/recipesList/recipeCard.module.css
+++ b/src/components/recipesList/recipeCard.module.css
@@ -4,8 +4,6 @@
   height: 100%;
 }
 
-
-
 .recipeCardSection {
   display: flex;
   flex-direction: column;
@@ -22,7 +20,8 @@
     object-fit: cover;
     filter: none;
     scale: 1;
-    transition: filter 250ms ease-in-out, scale 250ms ease-in-out, object-fit 250ms ease-in-out;
+    transition: filter 250ms ease-in-out, scale 250ms ease-in-out,
+      object-fit 250ms ease-in-out;
     border-radius: 10px;
     position: relative;
   }
