--- a/src/app/favorite/page.module.css
+++ b/src/app/favorite/page.module.css
@@ -24,6 +24,26 @@
     }
 
     @supports (-moz-user-select: none) {
+      & li:has([aria-pressed="true"]):not(:has(~ li [aria-pressed="true"])) {
+        width: fit-content;
+        max-width: calc(100vw / 2);
+        place-self: center;
+
+        @media (min-width: $lg) {
+          max-width: calc(100vw / 3);
+        }
+      }
+
+      & li:has([aria-pressed="true"]):has(~ li [aria-pressed="true"])~li:has([aria-pressed="true"]) { 
+        width: auto;
+        max-width: none;
+        place-self: stretch;
+
+        @media (min-width: $lg) {
+          max-width: none;
+        }
+      }
+
       & li:first-child:has([aria-pressed="true"]):not(:has(~ li [aria-pressed="true"])) {
         width: fit-content;
         max-width: calc(100vw / 2);
@@ -34,15 +54,7 @@
         }
       }
 
-      & li:has([aria-pressed="true"]) :not(:first-child) :not(:last-child) :not(:has(~ li [aria-pressed="true"])) :not(:has([aria-pressed="true"]) ~ li:last-child) {
-        width: fit-content;
-        max-width: calc(100vw / 2);
-        place-self: center;
 
-        @media (min-width: $lg) {
-          max-width: calc(100vw / 3);
-        }
-      }
 
       & li:last-child:has([aria-pressed="true"]):not(:has([aria-pressed="true"]) ~ li) {
         width: fit-content;
