fix: firefox only-of-class the most simple implementation

--- a/src/app/favorite/page.module.css
+++ b/src/app/favorite/page.module.css
@@ -23,7 +23,7 @@
       }
     }
 
-    @supports (-moz-user-select: none) {
+    @supports not selector(:nth-child(1 of li)) {
       & li:has([aria-pressed="true"]):not(:has(~ li [aria-pressed="true"])) {
         width: fit-content;
         max-width: calc(100vw / 2);
@@ -43,30 +43,6 @@
           max-width: none;
         }
       }
-
-      & li:first-child:has([aria-pressed="true"]):not(:has(~ li [aria-pressed="true"])) {
-        width: fit-content;
-        max-width: calc(100vw / 2);
-        place-self: center;
-
-        @media (min-width: $lg) {
-          max-width: calc(100vw / 3);
-        }
-      }
-
-
-
-      & li:last-child:has([aria-pressed="true"]):not(:has([aria-pressed="true"]) ~ li) {
-        width: fit-content;
-        max-width: calc(100vw / 2);
-        place-self: center;
-
-        @media (min-width: $lg) {
-          max-width: calc(100vw / 3);
-        }
-      }
-
-
     }
   }
 
